--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 server.port=9001
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+logging.level.com.rest.webservice.restfulwebservices=DEBUG
+logging.level.com.rest.webservice.exception=ALL
+logging.level.com.rest.webservice.restfulwebservices.user=INFO, DEBUG
+
+server.tomcat.accesslog.buffered=false
+server.tomcat.accesslog.directory=/Users/cc064790/RestfulWebService/restful-web-services/logs/
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b resp_time=%D
+server.tomcat.accesslog.prefix=ucern-engage-time-access
+server.tomcat.accesslog.rename-on-rotate=false
+server.tomcat.accesslog.request-attributes-enabled=false
+server.tomcat.accesslog.rotate=false
+server.tomcat.accesslog.suffix=.log
+server.tomcat.max-threads=600
