Internationalization i18n for RESTful Services tweaks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ server.tomcat.accesslog.request-attributes-enabled=false
 server.tomcat.accesslog.rotate=false
 server.tomcat.accesslog.suffix=.log
 server.tomcat.max-threads=600
+
+
+# INTERNATIONALIZATION 
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
